# AI-interface

./: .env_example  .pre-commit-config.yaml  README.md  README_zh.md  example.ipynb  example_llm.ipynb  pyproject.toml  requirements.txt  test.py
ai_interface/: __init__.py  base_llm.py  base_lvm.py  templete_llm.py
src/: __init__.py  base_llm.py  templete_llm.py  utils.py
src/datasets/: manager.py
src/datasets/llm_prompts/: text2triples.py
