[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai_interface"
authors = [{name = "Guohao Zhang", email = "guohao2045@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pandas>=2.3",
    "python-dotenv>=1.0",
    "wasabi>=1.1",
    "pillow>=9.0",
]
